--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 		
-		<footer th:insert="layout/footer :: footer"></footer>
+		<footer  class="fixed-bottom" th:insert="layout/footer :: footer"></footer>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/popper.js/1.16.0/popper.min.js}"></script>
