--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarlineasproductos.html
@@ -22,9 +22,11 @@
 						<a class="btn btn-info" th:href="@{/lineaproducto/nuevo}"><i class="fas fa-plus"></i>&nbsp;Create Productline</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
-						<form class="form-inline">
-						   <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-						   <button class="btn btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>&nbsp;Buscar</button>
+						
+						<form class="form-inline" th:action="@{/lineaproducto/buscar}" th:method="get">
+						   <input class="form-control mr-sm-2" type="text" id="productlines" name="productlines" placeholder="Linea de producto " aria-label="Search">
+				
+						   <button type="submit" class="btn btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i>&nbsp;Buscar</button>
 						</form>
 					</div>
 				</div>
@@ -42,7 +44,7 @@
 				   
 				    <tr th:each="p: ${productlines}">
 				      <td th:text="${p.productLine}"></td>
-				      <td th:text="${p.textDescripton}"></td>
+				      <td th:text="${p.textDescription}"></td>
 				      <td th:text="${p.htmlDescription}"></td>
 				      <td th:text="${p.image}"><img th:src="@{/img/noimageavaiable.png}" class="img-thumbnail imageline" alt="..."></td>
 				      <td>
