--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
@@ -22,9 +22,11 @@
 						<a class="btn btn-info" th:href="@{/producto/nuevo}"><i class="fas fa-plus"></i>&nbsp;Create producto</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
-						<form class="form-inline">
-						   <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-						   <button class="btn btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>&nbsp;Buscar</button>
+						
+						<form class="form-inline" th:action="@{/producto/buscar}" th:method="get">
+						   <input class="form-control mr-sm-2" type="text" id="productocode" name="peoductocode" placeholder="Codigo de producto " aria-label="Search">
+						   <input class="form-control mr-sm-2" type="text" id="productname" name="productname" placeholder="Nombre del proucto" aria-label="Search">
+						   <button type="submit" class="btn btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i>&nbsp;Buscar</button>
 						</form>
 					</div>
 				</div>
