--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoproducto.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevoproducto.html
@@ -23,12 +23,12 @@
 						  	<div class="p-3">
 						  		<div class="form-group">
 								    <label for="codigo">Código</label>
-								    <input type="text" class="form-control" id="codigo" th:field="*{productCode}" placeholder="Ingresar el codigo del producto">
+								    <input type="text" class="form-control" id="productCode" th:field="*{productCode}" placeholder="Ingresar el codigo del producto">
 						  			<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('productCode')}" th:errors="*{productCode}" ></div>
 						  		</div>
 						  		<div class="form-group">
 								    <label for="nombre">Nombre</label>
-								    <input type="text" class="form-control" id="nombre" th:field="*{productName}" placeholder="Ingresar el nombre del producto">
+								    <input type="text" class="form-control" id="productName" th:field="*{productName}" placeholder="Ingresar el nombre del producto">
 						  		<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}"></div>
 						  		</div>
 						  		<div class="form-group">
@@ -43,32 +43,32 @@
 							  	</div>
 							  	<div class="form-group">
 								    <label for="vendedorproducto">Escala</label>
-								    <input type="text" class="form-control" id="proveedor"  th:field="*{productScale}" placeholder="Ingresar la escala del producto">
+								    <input type="text" class="form-control" id="productScale"  th:field="*{productScale}" placeholder="Ingresar la escala del producto">
 						  		<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('productScale')}" th:errors="*{productScale}"></div>
 						  		</div>
 						  		<div class="form-group">
 								    <label for="vendedorproducto">Proveedor</label>
-								    <input type="text" class="form-control" id="proveedor" th:field="*{productVendor}" placeholder="Ingresar el proveedor del producto">
+								    <input type="text" class="form-control" id="productVendor" th:field="*{productVendor}" placeholder="Ingresar el proveedor del producto">
 						  		<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('productVendor')}" th:errors="*{productVendor}"></div>
 						  		</div>
 							  	<div class="form-group">
 								    <label for="descripcion">Descripción</label>
-								    <input type="text" class="form-control" id="descripcion" th:field="*{productDescripton}" placeholder="Ingresar descripción del producto">
+								    <input type="text" class="form-control" id="productDescripton" th:field="*{productDescripton}" placeholder="Ingresar descripción del producto">
 							  	<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('productDescripton')}" th:errors="*{productDescripton}"></div>
 							  	</div>
 							  	<div class="form-group">
 								    <label for="stock">Stock</label>
-								    <input type="text" class="form-control" id="stock" th:field="*{quantityInStock}" placeholder="Ingresar stock del producto">
+								    <input type="text" class="form-control" id="quantityInStock" th:field="*{quantityInStock}" placeholder="Ingresar stock del producto">
 							  	<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('quantityInStock')}" th:errors="*{quantityInStock}"></div>
 							  	</div>
 						  		<div class="form-group">
 								    <label for="preciocompra">Precio de compra</label>
-								    <input type="text" class="form-control" id="preciocompra" th:field="*{buyPrice}" placeholder="Ingresar precio de compra del producto">
+								    <input type="text" class="form-control" id="buyPrice" th:field="*{buyPrice}" placeholder="Ingresar precio de compra del producto">
 						  		<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('buyPrice')}" th:errors="*{buyPrice}"></div>
 						  		</div>
 							  	<div class="form-group">
 								    <label for="preciolista">Precio de lista</label>
-								    <input type="text" class="form-control" id="preciolista" th:field="*{msrp}" placeholder="Ingresar precio de lista del producto">
+								    <input type="text" class="form-control" id="msrp" th:field="*{msrp}" placeholder="Ingresar precio de lista del producto">
 							  	<div class="alert alert-danger col-sm-12 mt-1" role="alert" th:if="${#fields.hasErrors('msrp')}" th:errors="*{msrp}"></div>
 							  	</div>
 							  
