--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -24,7 +24,7 @@
 							       <i class="fas fa-users"></i>&nbsp;Users
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">New user</a>
+									<a class="dropdown-item text-white hoverlink" >New user</a>
 									<a class="dropdown-item text-white hoverlink">User list</a>
 								</div>
 						    </li>	
@@ -33,8 +33,8 @@
 							       <i class="fas fa-user-tie"></i>&nbsp;Employees
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">New employee</a>
-									<a class="dropdown-item text-white hoverlink">List of employees</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/employee/new}">New employee</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/employee/list}">List of employees</a>
 								</div>
 						    </li>
 						    <li class="nav-item dropdown">
@@ -51,8 +51,8 @@
 							       <i class="fas fa-universal-access"></i>&nbsp;Customers
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink" >New customers</a>
-									<a class="dropdown-item text-white hoverlink hoverlink">List of customers</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/customer/new}">New customers</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/customer/list}">List of customers</a>
 								</div>
 						    </li>
 						           <li class="nav-item dropdown ">
@@ -72,7 +72,7 @@
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
 									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/nuevo}">New product</a>
-									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/listar}">List of  productslines</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/listar}">List of  product lines</a>
 						   </div>
 						   </li>
 						    <li class="nav-item dropdown ">
