--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaorden.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevaorden.html
@@ -11,48 +11,51 @@
 	<body>
 	
 		<header th:insert="layout/header :: header"></header>
-		
+	
 		<div class="container mb-5">
 			<div class="row">
 				<div class="col-7 px-auto mx-auto text-center mt-3 mb-4 py-2 border-bottom">
-					<h2><i class="far fa-list-alt fa-lg"></i>&nbsp;Registro orden</h2>
+					<h2><i class="far fa-list-alt fa-lg"></i>&nbsp;Orders registration</h2>
 				</div>
-				<form class="bg-white col-sm-7 p-auto m-auto border">
+				<form class="bg-white col-sm-7 p-auto m-auto border" th:action="@{/order/save}" th:method="post" th:object="${order}">
 					<div class="p-2">
 					  <div class="form-group">
 						  	<div class="p-3">
 						  		<div class="form-group">
-								    <label for="numeroorden">Número de orden</label>
-								    <input type="text" class="form-control" id="numeroorden" placeholder="Ingresar el numero de orden">
+								    <label for="orderNumber">Order number</label>
+								    <input th:field="*{orderNumber}" type="number" class="form-control" id="orderNumber" placeholder="Enter the order number">
 						  		</div>
 						  		<div class="form-group">
-								    <label for="fechaorden">Fecha de orden</label>
-								    <input type="date" class="form-control" id="fechaorden" placeholder="Ingresar la fecha de orden">
+								    <label for="orderDate">Order date</label>
+								    <input th:field="*{orderDate}" type="date" class="form-control" id="orderDate" placeholder="Enter the order date">
 						  		</div>
 							  	<div class="form-group">
-								    <label for="fechaconfirmacion">Fecha de confirmación</label>
-								    <input type="date" class="form-control" id="fechaconfirmacion" placeholder="Ingresar fecha de confirmación de la orden">
+								    <label for="requiredDate">Required date</label>
+								    <input th:field="*{requiredDate}" type="date" class="form-control" id="requiredDate" placeholder="Enter order confirmation date">
 						  		</div>
 							  	<div class="form-group">
-								    <label for="fechaenvio">Fecha de envío</label>
-								    <input type="date" class="form-control" id="fechaenvio" placeholder="Ingresar fecha de envío de la orden">
+								    <label for="shippedDate">Shipped date</label>
+								    <input th:field="*{shippedDate}" type="date" class="form-control" id="shippedDate" placeholder="Enter order shipping date">
 						  		</div>
 						  		<div class="form-group">
-								    <label for="estado">Estado</label>
-								    <input type="text" class="form-control" id="estado" placeholder="Ingresar el estado de la orden">
+								    <label for="state">State</label>
+								    <input th:field="*{status}" type="text" class="form-control" id="state" placeholder="Enter order status">
 						  		</div>
 							  	<div class="form-group">
-								    <label for="comentario">Comentario</label>
-								    <input type="text" class="form-control" id="comentario" placeholder="Ingresar comentario sobre la orden">
+								    <label for="comments">Commentary</label>
+								    <input th:field="*{comments}" type="text" class="form-control" id="comments" placeholder="Enter comment about the order">
 							  	</div>
-						  		<div class="form-group">
-								    <label for="numerocliente">Cliente</label>
-								    <select class="form-control" id="numerocliente">
-									  <option>Seleccione una opción</option>
+							   <div class="form-group">
+								    <label for="customerNumber">Customer</label>
+								    <select th:field="*{customerNumber.customerNumber}" class="form-control" name="customernumber" id="customernumber">
+									  <option th:each="c:${customers}" th:value="${c.customerNumber}">
+									  	<span th:text="${c.customerName}"></span>
+									  </option>
 									</select>								    
 							  	</div>
 							  	<div class="mt-4">
-							  		<button type="button" th:href="@{/orden/nuevo}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear orden</button>
+							  		<button type="submit" th:href="@{/order/save}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Save customer</button>
+							  		<a th:href="@{/order/list}" class="btn bg-secondary btn-lg btn-block text-white"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
 							  	</div>
 								  
 							</div>
