Task:Se trabajo en la carga y visualizacion de una imagen en producline

--- a/GrupoPV_ProjectFinal/src/main/resources/static/css/styles.css
+++ b/GrupoPV_ProjectFinal/src/main/resources/static/css/styles.css
@@ -42,3 +42,17 @@ body{
 
 .hoverlink:hover { background: #0E6251; } 
 
+.img-formater{
+	max-width: 5rem;
+	max-height: 5rem;
+}
+
+#image{
+	position:absolute;
+	opacity: 0;
+}
+
+.img-format{
+	max-width: 20%;
+	max-height: 20%
+}
