--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarclientes.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarclientes.html
@@ -23,8 +23,7 @@
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline" th:action="@{/customer/search}" th:method="get">
-						   <input class="form-control mr-sm-2" type="text" id="customernumber" name="customernumber" placeholder="Number" aria-label="Search">
-						   <input class="form-control mr-sm-2" type="text" id="city" name="city" placeholder="City" aria-label="Search">
+						   <input class="form-control mr-sm-2" type="text" id="var" name="var" placeholder="Search" aria-label="Search">
 						   <button class="btn btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>&nbsp;Search</button>
 						</form>
 					</div>
