--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarempleados.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarempleados.html
@@ -23,9 +23,7 @@
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline d-flex justify-content-end" th:action="@{/employee/search}" th:method="get">
-							<input class="form-control mr-sm-2 col-sm-3 p-2" type="text" id="employeenumber" name="employeenumber" placeholder="Number" aria-label="Search">
-							<input class="form-control mr-sm-2 col-sm-3 p-2 " type="text" id="lastname" name="lastname" placeholder="Last name" aria-label="Search">
-							<input class="form-control mr-sm-2 col-sm-3 p-2 " type="text" id="jobtitle" name="jobtitle" placeholder="Job title" aria-label="Search">
+							<input class="form-control mr-sm-2 p-2" type="text" id="var" name="var" placeholder="Search" aria-label="Search">
 						    <button class="btn btn btn-info my-2 my-sm-0 p-2 bd-highlight" type="submit"><i class="fas fa-search"></i>&nbsp;Search</button>
 						</form>
 					</div>
