--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listaroficinas.html
@@ -23,8 +23,7 @@
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline" th:action="@{/office/search}" th:method="get">
-						   <input class="form-control mr-sm-2" type="text" id="officecode" name="officecode" placeholder="Code " aria-label="Search">
-						   <input class="form-control mr-sm-2" type="text" id="officecity" name="officecity" placeholder="City" aria-label="Search">
+						   <input class="form-control mr-sm-2" type="text" id="var" name="var" placeholder="Search" aria-label="Search">
 						   <button type="submit" class="btn btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i>&nbsp;Search</button>
 						</form>
 					</div>
