--- a/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarlineaproducto.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/eliminarlineaproducto.html
@@ -26,8 +26,8 @@
 							<p>Product line: <span th:text="${productlines.productLine}" ></span></p>
 						</div>
 						<div class="my-3">
-							<a type="button" th:href="@{/lineaproducto/listar}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
-						<a type="button" th:href="@{/lineaproducto/borrar/confirmar/}+${productlines.productLine}"  class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</a>
+							<a type="button" th:href="@{/productline/list}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
+						<a type="button" th:href="@{/productline/delete/confirm/}+${productlines.productLine}"  class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</a>
 						</div>
 					</div>
 				</div>
