--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -68,11 +68,11 @@
 						    	
 						    	<li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="fas fa-boxes">&nbsp;</i>Linea de Producto
+							       <i class="fas fa-boxes">&nbsp;</i>Product lines
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/nuevo}">New product</a>
-									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/lineaproducto/listar}">List of  product lines</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/productline/new}">New product</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/productline/list}">List of  product lines</a>
 						   </div>
 						   </li>
 						    <li class="nav-item dropdown ">
