--- a/GrupoPV_ProjectFinal/src/main/resources/templates/eliminardetalleorden.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/eliminardetalleorden.html
@@ -19,16 +19,17 @@
 				</div>
 				<div class="col-sm-7 p-auto m-auto">
 					<div class="p-3 text-center">
-						<i class="fas fa-boxes fa-8x" style="color: #C0392B;"></i>
+					<i class="fas fa-list-alt fa-8x" style="color: #C0392B;"></i>
+						<!--  <i class="fas fa-clipboard-list fa-8x" style="color: #C0392B;"></i>-->
 						<br>
 						<div class="my-4">
 							<span class="font-weight-bolder">Are you sure to delete the following record?</span>
-							<p>Product code: <span th:text="${products.productCode}"></span></p>
+							<p>Order number:<span th:text="${orderDetail.id.orderNumber.orderNumber}"></span></p>
+							<p>Product code:<span th:text="${orderDetail.id.productCode.productCode}"></span></p>
 						</div>
 						<div class="my-3">
-							
-						<a type="button" th:href="@{/product/list}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
-						<a type="button" th:href="@{/product/delete/confirm/}+${products.productCode}"  class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</a>
+							<a type="button" th:href="@{/order/list}" class="btn btn-info mx-3"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
+							<a type="button" th:href="@{/orderdetail/delete/confirm/}+${orderDetail.id.orderNumber.orderNumber}+'/'+${orderDetail.id.productCode.productCode}" class="btn btn-danger mx-3"><i class="far fa-trash-alt"></i>&nbsp;Delete</a>
 						</div>
 					</div>
 				</div>
