--- a/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/layout/header.html
@@ -57,12 +57,11 @@
 						    </li>
 						           <li class="nav-item dropdown ">
 							    <a class="nav-link dropdown-toggle text-white hoverlink" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							       <i class="fas fa-boxes">&nbsp;</i>Product
+							       <i class="fas fa-boxes">&nbsp;</i>Products
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/producto/nuevo}">New product</a>
-									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/producto/listar}">List of products</a>
-
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/product/new}">New product</a>
+									<a class="dropdown-item text-white hoverlink hoverlink" th:href="@{/product/list}">List of products</a>
 							     </div>
 						    </li>
 						    	
@@ -89,10 +88,10 @@
 							        <i class="fas fa-clipboard-list"></i>&nbsp;Orders
 							    </a>
 								<div class="dropdown-menu bg-darkcyan">
-									<a class="dropdown-item text-white hoverlink">New oder</a>
-									<a class="dropdown-item text-white hoverlink">List of orders</a>
-									<a class="dropdown-item text-white hoverlink">New order detail</a>
-									<a class="dropdown-item text-white hoverlink">List of orders details</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/order/new}">New oder</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/order/list}">List of orders</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/orderdetail/new}">New order detail</a>
+									<a class="dropdown-item text-white hoverlink" th:href="@{/orderdetail/list}">List of orders details</a>
 								</div>
 						    </li>
 						    
