--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarordenes.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarordenes.html
@@ -23,8 +23,8 @@
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						<form class="form-inline" th:action="@{/order/search}" th:method="get">
-						   <input class="form-control mr-sm-2" type="text" id="ordernumber" name="ordernumber" placeholder="Number" aria-label="Search">
-						   <input class="form-control mr-sm-2" type="text" id="state" name="state" placeholder="State" aria-label="Search">
+						   <input class="form-control mr-sm-2" type="text" id="var" name="var" placeholder="Search" aria-label="Search">
+						  <!--   <input class="form-control mr-sm-2" type="text" id="state" name="state" placeholder="State" aria-label="Search">-->
 						   <button class="btn btn btn-info my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>&nbsp;Search</button>
 						</form>
 					</div>
