--- a/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/listarproductos.html
@@ -16,33 +16,32 @@
 			<div class="row">
 				<div class="col-12 mt-3 mb-3 py-2 d-flex bd-highlight mb-3">
 					<div class="p-2 bd-highlight">
-						<h2><i class="fab fa-dropbox fa-lg"></i>&nbsp;Lista de productos</h2>
+						<h2><i class="fab fa-dropbox fa-lg"></i>&nbsp;List of products</h2>
 					</div>
 					<div class="p-2 bd-highlight">
-						<a class="btn btn-info" th:href="@{/producto/nuevo}"><i class="fas fa-plus"></i>&nbsp;Create producto</a>
+						<a class="btn btn-info" th:href="@{/product/new}"><i class="fas fa-plus"></i>&nbsp;Create product</a>
 					</div>
 					<div class ="ml-auto p-2 bd-highlight">
 						
-						<form class="form-inline" th:action="@{/producto/buscar}" th:method="get">
-						   <input class="form-control mr-sm-2" type="text" id="productocode" name="peoductocode" placeholder="Codigo de producto " aria-label="Search">
-						   <input class="form-control mr-sm-2" type="text" id="productname" name="productname" placeholder="Nombre del proucto" aria-label="Search">
-						   <button type="submit" class="btn btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i>&nbsp;Buscar</button>
+						<form class="form-inline" th:action="@{/product/search}" th:method="get">
+						   <input class="form-control mr-sm-2" type="text" id="var" name="var" placeholder="Search" aria-label="Search">
+						   <button type="submit" class="btn btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i>&nbsp;Search</button>
 						</form>
 					</div>
 				</div>
 				<table class="table table-striped col-sm-12 bg-light border">
 				  <thead>
 				    <tr class="bg-buebird text-white">
-				      <th scope="col">Código</th>
-				      <th scope="col">Nombre</th>
-				      <th scope="col">Linea de producto</th>
-				      <th scope="col">Escala</th>
-				      <th scope="col">Proveedor</th>
-				      <th scope="col">Descripción</th>
+				      <th scope="col">Code</th>
+				      <th scope="col">Name</th>
+				      <th scope="col">Product line</th>
+				      <th scope="col">Scale</th>
+				      <th scope="col">Vendor</th>
+				      <th scope="col">Description</th>
 				      <th scope="col">Stock</th>
-				      <th scope="col">Precio de compra</th>
-				      <th scope="col">Precio de lista</th>
-				      <th scope="col">Acciones</th>
+				      <th scope="col">Buy price</th>
+				      <th scope="col">MSRP</th>
+				      <th scope="col">Actions</th>
 				    </tr>
 				  </thead>
 				  <tbody>
@@ -50,6 +49,7 @@
 				      
 				      <td th:text="${p.productCode}"></td>
 				      <td th:text="${p.productName}"></td>
+				      <td th:text="${p.productlines.productLine}"></td>
 				      <td th:text="${p.productScale}"></td>
 				      <td th:text="${p.productVendor}"></td>
 				      <td th:text="${p.productDescripton}"></td>
@@ -57,12 +57,11 @@
 				      <td th:text="${p.buyPrice}"></td>
 				      <td th:text="${p.msrp}"></td>
 				      <td>
-				      	<a class="btn btn-warning" th:href="@{/producto/editar/}+${p.productCode}"><i class="fas fa-edit"></i></a>
-				      	<a class="btn btn-danger" th:href="@{/producto/borrar/}+${p.productCode}"><i class="far fa-trash-alt"></i></a>
+				      	<a class="btn btn-warning" th:href="@{/product/edit/}+${p.productCode}"><i class="fas fa-edit"></i></a>
+				      	<a class="btn btn-danger" th:href="@{/product/delete/}+${p.productCode}"><i class="far fa-trash-alt"></i></a>
 				      </td>
 				    </tr>
-				    
-				   
+
 				  </tbody>
 				</table>
 			</div>
