--- a/GrupoPV_ProjectFinal/src/main/resources/templates/nuevodetalleorden.html
+++ b/GrupoPV_ProjectFinal/src/main/resources/templates/nuevodetalleorden.html
@@ -15,48 +15,52 @@
 		<div class="container mb-5">
 			<div class="row">
 				<div class="col-7 px-auto mx-auto text-center mt-3 mb-4 py-2 border-bottom">
-					<h2><i class="fas fa-clipboard-list fa-lg"></i>&nbsp;Registro detalle de orden</h2>
+					<h2><i class="fas fa-clipboard-list fa-lg"></i>&nbsp;Order detail registration</h2>
 				</div>
-				<form class="bg-white col-sm-7 p-auto m-auto border">
+				<form class="bg-white col-sm-7 p-auto m-auto border" th:action="@{/orderdetail/save}" th:method="post" th:object="${orderDetail}">
 					<div class="p-2">
 					  <div class="form-group">
 						  	<div class="p-3">
 						  		<div class="form-group">
-								    <label for="numeroorden">Número de orden</label>
-								    <select class="form-control" id="numeroorden">
-									  <option>Seleccione una opción</option>
+								    <label for="ordernumber">Order number</label>
+								    <select th:field="*{id.orderNumber}" class="form-control" id="ordernumber" name="ordernumber">
+									  <option th:each="d:${orders}" th:value="${d.orderNumber}">
+									  	 <span th:text="${d.orderNumber}"></span>
+									  </option>
 									</select>								    
 							  	</div>
 						  		<div class="form-group">
-								    <label for="codigoproducto">Código de producto</label>
-								    <select class="form-control" id="codigoproducto">
-									  <option>Seleccione una opción</option>
+								    <label for="productcode">Product code</label>
+								    <select th:field="*{id.productCode}" class="form-control" id="poductcode">
+									  <option th:each="p: ${products}" th:value="${p.productCode}">
+									  	<span th:text="${p.productCode}"></span>
+									  </option>
 									</select>								    
 							  	</div>
 						  		<div class="form-group">
-								    <label for="cantidadpedida">Cantidad pedida</label>
-								    <input type="number" class="form-control" id="cantidadpedida" placeholder="Ingresar la cantidad pedida">
+								    <label for="quantityOrdered">Quantity ordered</label>
+								    <input th:field="*{quantityOrdered}" type="number" class="form-control" id="quantityOrdered" placeholder="Enter the quantity ordered">
 						  		</div>
 							  	<div class="form-group">
-								    <label for="preciounitario">Precio unitario</label>
-								    <input type="number" class="form-control" id="preciounitario" placeholder="Ingresar precio unitario del pedido">
+								    <label for="priceEach">Prince Each</label>
+								    <input th:field="*{priceEach}" type="number" class="form-control" id="priceEach" placeholder="Enter the price of each order">
 						  		</div>
 							  	<div class="form-group">
-								    <label for="numerolinea">Número de linea del pedido</label>
-								    <input type="number" class="form-control" id="numerolinea" placeholder="Ingresar numero de linea del pedido">
+								    <label for="orderLineNumber">Order line number</label>
+								    <input  th:field="*{orderLineNumber}" type="number" class="form-control" id="orderLineNumber" placeholder="Enter order line number">
 						  		</div>
 							  	<div class="mt-4">
-							  		<button type="button" th:href="@{/ordendetalle/nuevo}"class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Crear detalle de orden</button>
+							  		<button type="submit" th:href="@{/orderdetail/save}" class="btn bg-maxblue btn-lg btn-block text-white"><i class="far fa-save"></i>&nbsp;Save order detail</button>
+							  		<a th:href="@{/orderdetail/list}" class="btn bg-secondary btn-lg btn-block text-white"><i class="fas fa-ban"></i>&nbsp;Cancel</a>
 							  	</div>
-								  
 							</div>
 						</div>
 					</div>
 				</form>
 			</div>
 		</div>
-		
-		<footer th:insert="layout/footer :: footer"></footer>
+		<br><br>
+		<footer class="fixed-bottom" th:insert="layout/footer :: footer"></footer>
 		
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/popper.js/1.16.0/popper.min.js}"></script>
